--- a/templates/addHospital.html
+++ b/templates/addHospital.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="static/css/styles.css">
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="./static/js/autoComplete.js"></script>
 </head>
 
 <body>
