--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         <li class="nav-item active">
             <a class="nav-link" href="/" style="color:white;">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white;">
             Add
             </a>
@@ -38,7 +38,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/edit" style="color:white;">Edit</a>
-        </li>
+        </li> -->
         </ul>
     </div>
   </nav>
